--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,12 @@ dependencies {
     compile 'com.tencent.bugly:crashreport:latest.release'
     compile 'com.tencent.bugly:crashreport:latest.release'
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
+
+
+
+      debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+      releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+        testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+
+
 }
