--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,14 +9,35 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        flavorDimensions "versionCode"
     }
+    signingConfigs {
+        debug {}
+        release {
+            storeFile file("jinlin.jks")
+            storePassword "111111"
+            keyAlias "jinlin"
+            keyPassword "111111"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+
+        wandoujia {}
+        baidu {}
+        c360 {}
+        uc {}
+        productFlavors.all { flavor ->
+            flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
+        }
+    }
+
 }
 
 dependencies {
@@ -40,9 +61,13 @@ dependencies {
 
 
 
+
       debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
       releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
         testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+       compile 'com.umeng.analytics:analytics:latest.integration'
+
+
 
 
 }
