--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,4 +81,20 @@ dependencies {
     implementation 'com.facebook.fresco:fresco:1.5.0'
 
 
+    compile 'com.xhb:xbanner:1.2.2'
+
+
+
+    compile 'com.nineoldandroids:library:2.4.0'
+
+
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+
+    compile 'com.yancy.imageselector:imageselector:1.3.3'
+
+
+    compile 'com.mostafagazar:customshapeimageview:1.0.4'
+
+
 }
