--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,10 @@ buildscript {
     repositories {
         google()
         jcenter()
-                {maven{url "https://maven.google.com"}}
+        {
+            maven{url "https://maven.google.com"}
+        }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
@@ -23,8 +26,12 @@ allprojects {
         maven {
             url "http://mvn.gt.igexin.com/nexus/content/repositories/releases/"
         }
+        maven { url 'https://jitpack.io' }
+
+
     }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
