--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,12 @@ android {
 
     }
     signingConfigs {
-        debug {}
+        debug {
+            keyAlias 'onetime'
+            keyPassword 'onetime1507c'
+            storeFile file('C:/Users/asus/Desktop/一刻钟签名/onetime.jks')
+            storePassword 'onetime1507c'
+        }
         release {
             storeFile file("jinlin.jks")
             storePassword "111111"
@@ -43,7 +48,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    useLibrary 'org.apache.http.legacy'
 
 }
 
@@ -56,7 +61,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     //统计
     compile 'com.umeng.analytics:analytics:latest.integration'
-
     compile 'com.jcodecraeer:xrecyclerview:1.2.6'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.squareup.retrofit2:retrofit:2.0.1'
@@ -64,7 +68,6 @@ dependencies {
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.google.code.gson:gson:2.8.2'
-
     compile 'com.tencent.bugly:crashreport:latest.release'
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
@@ -77,43 +80,23 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.android.support:design:27.0.1'
-
-
     compile 'com.facebook.fresco:fresco:1.5.0'
     compile 'com.facebook.fresco:animated-gif:1.5.0'
-
-
     compile 'com.xhb:xbanner:1.2.2'
-
-
-
     compile 'com.nineoldandroids:library:2.4.0'
-
-
     implementation 'com.github.bumptech.glide:glide:3.7.0'
-
-
     compile 'com.yancy.imageselector:imageselector:1.3.3'
-
-
     compile 'com.mostafagazar:customshapeimageview:1.0.4'
-
     //3D地图so及jar
     compile 'com.amap.api:3dmap:latest.integration'
     //定位功能
     compile 'com.amap.api:location:latest.integration'
-
     //上传视频
     compile 'com.github.LuckSiege.PictureSelector:picture_library:v2.1.7'
-
     //节操
     compile 'fm.jiecao:jiecaovideoplayer:4.8.3'
-
     //dagger
     compile 'com.google.dagger:dagger:2.9'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
-
-
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-
 }
