--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+
+    sourceSets {
+        main {
+            // 设置Jni so文件路径 如果有jniLibs目录就不需要设置，好像手动创建的 jniLibs目录无效
+            jniLibs.srcDirs = ['libs']
+        }
+    }
     useLibrary 'org.apache.http.legacy'
 
 }
@@ -92,13 +100,19 @@ dependencies {
     //上传视频
     compile 'com.github.LuckSiege.PictureSelector:picture_library:v2.1.7'
     //节操
-    compile 'fm.jiecao:jiecaovideoplayer:4.8.3'
+    // compile 'fm.jiecao:jiecaovideoplayer:4.8.3'
+    compile 'cn.jzvd:jiaozivideoplayer:6.2.3'
     //dagger
     compile 'com.google.dagger:dagger:2.9'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
 
-
-  //历史搜索
+    //历史搜索
     compile 'com.carson_ho:SearchLayout:1.0.1'
+
+    //网络调节器
+    compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
+
+    //图片查看器
+    compile 'com.github.chrisbanes:PhotoView:1.2.6'
 }
