--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,12 +19,6 @@ android {
 
     }
     signingConfigs {
-        release {
-            storeFile file("jinlin.jks")
-            storePassword "111111"
-            keyAlias "jinlin"
-            keyPassword "111111"
-        }
     }
     productFlavors {
         wandoujia {}
@@ -63,7 +57,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     //统计
     compile 'com.umeng.analytics:analytics:latest.integration'
-
     //retrofit 依赖
     compile 'com.jcodecraeer:xrecyclerview:1.2.6'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
@@ -92,6 +85,7 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.yancy.imageselector:imageselector:1.3.3'
+    //圆形图片
     compile 'com.mostafagazar:customshapeimageview:1.0.4'
     //3D地图so及jar
     compile 'com.amap.api:3dmap:latest.integration'
@@ -106,16 +100,15 @@ dependencies {
     compile 'com.google.dagger:dagger:2.9'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-
     //历史搜索
     compile 'com.carson_ho:SearchLayout:1.0.1'
-
     //网络调节器
     compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
-
     //图片查看器
     compile 'com.github.chrisbanes:PhotoView:1.2.6'
-
     //bottom-bar
     compile 'com.roughike:bottom-bar:2.3.1'
+
+    implementation 'com.yanzhenjie:permission:1.0.6'
+
 }
